--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 14 22:16:25 CST 2015
-sdk.dir=C\:\\Users\\David\\AppData\\Local\\Android\\sdk
+#Thu Nov 19 17:59:49 CST 2015
+sdk.dir=C\:\\Users\\shing\\AppData\\Local\\Android\\sdk
