--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.itisdancing.Sokoban"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.0"
+      android:configChanges="orientation|keyboardHidden|screenSize">
     <application android:label="@string/app_name">
         <activity android:name="SokobanApp"
                   android:label="@string/app_name">
