--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SokobanGame" android:label="@string/app_name">
+        <activity android:name="SokobanGame" android:label="@string/app_name" android:configChanges="keyboardHidden|orientation|screenSize" android:screenOrientation="portrait">
         </activity>
         <activity android:name="SokobanScores" android:label="Sokoban High Scores">
         </activity>
