--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,5 +16,7 @@
         </activity>
         <activity android:name="SokobanScores" android:label="Sokoban High Scores">
         </activity>
+        <activity android:name="PreferenceSetting" android:label="Settings">
+        </activity>
     </application>
 </manifest> 
