--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.itisdancing.Sokoban"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.0"
+      android:configChanges="orientation|keyboardHidden|screenSize">
     <application android:label="@string/app_name">
         <activity android:name="SokobanApp"
                   android:label="@string/app_name">
@@ -11,7 +12,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SokobanGame" android:label="@string/app_name">
+        <activity android:name="SokobanGame" android:label="@string/app_name" android:configChanges="keyboardHidden|orientation|screenSize" android:screenOrientation="portrait">
         </activity>
         <activity android:name="SokobanScores" android:label="Sokoban High Scores">
         </activity>
